Bug 143334 - qt5/kf5: Broken rendering e.g. after using Calc's Borders toolbar item
Summary: qt5/kf5: Broken rendering e.g. after using Calc's Borders toolbar item
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.2
Keywords: bibisected, bisected, regression
: 143393 (view as bug list)
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2021-07-13 13:03 UTC by Michael Weghorn
Modified: 2021-09-07 22:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (678.44 KB, video/webm)
2021-07-13 13:03 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2021-07-13 13:03:55 UTC
Created attachment 173530 [details]
Screencast

Steps to reproduce:

0) use qt5 or kf5 VCL plugin (SAL_USE_VCLPLUGIN=qt5 or SAL_USE_VCLPLUGIN=kf5) 
1) start LO Calc
2) in the formatting toolbar, open the "Borders" popup (either by mouse klick or using keyboard)
3) Click e.g. on the second item in the list ("Set left border only")
4) Press "Alt"

Result:

in step 3: Rendering is broken, some areas no more painted
in step 4: Even more areas no more painted

The attached screenshot shows the problem.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 0fc020fb73c86a20608e8dff12af607e60327379
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2021-07-13 13:05:41 UTC
This is a regression. Bibisected to:

commit 963f252cd1ea9c268a6ced68a3454b10cbee1a89
Author: Jan-Marek Glogowski
Date:   Sun Apr 11 17:40:26 2021 +0200

    Qt5/KF5 get rid of unneeded own grahics handling
    
    This was hiding tdf#141623, when I decided to implement the override
    to run the kf5 VCL plugin with the qfont text rendering.
    
    Change-Id: Id1fcd363bd77a756cb27e3a171c872ce792da5ad
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113956
    Tested-by: Jenkins
    Reviewed-by: Jan-Marek Glogowski
Comment 2 Michael Weghorn 2021-07-13 13:26:50 UTC
tdf#143114 describes another way to trigger broken rendering (issue (1) from the bug report)
Comment 3 Stéphane Guillou (stragu) 2021-07-19 12:07:16 UTC
I could reproduce with kf5 but not qt5:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 113d308155e4b6a67a8510098a7db5f4a6632bdc
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-16_21:27:22
Calc: threaded

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

qt5 for same version did not show missing areas like for kf5.
On Ubuntu 18.04
Comment 4 Michael Weghorn 2021-07-20 06:26:55 UTC
(In reply to stragu from comment #3)
> I could reproduce with kf5 but not qt5:

Interesting, I just double-checked that I can actually reproduce with qt5 as well...

Anyway, Jan-Marek has a pending fix here: https://gerrit.libreoffice.org/c/core/+/119237
Comment 5 Commit Notification 2021-07-20 13:03:37 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec77a2ed0283cb3446f6e352fc329afd3dfb785c

tdf#143334 Qt5 don't reset buffer on style change

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-07-21 02:05:53 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/83f91ec066614c3c40282913898083d317edd072

tdf#143334 Qt5 don't reset buffer on style change

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jan-Marek Glogowski 2021-07-24 10:02:55 UTC
*** Bug 143393 has been marked as a duplicate of this bug. ***